# AI-Video-Audio-Translation-App

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  main.cpp  package.json  todo  todo.md  vcpkg.json
cmake/: windows_mingw.cmake
common/: progress_ipc.cpp
docs/: ggml.md  learn_llama.md  questions.md
electron/: package-lock.json  package.json
electron/src/: index.html  main.js  preload.js  renderer.js  styles.css
electronapp/: package.json
electronapp/src/: renderer.js
include/: ProgressBar.hpp  ocr_main.h  params.h  progress_ipc.h  translation.h  video.h  whisper_bridge.h
rag/: qwer
src/: index.html  main.js
src/common/: progress_ipc.cpp
src/llama/: CMakelists.txt
src/llama/cmake/: common.cmake
src/llama/src/: CMakeLists.txt  llama-adapter.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-context.h  llama-cparams.h  llama-grammar.h  llama-hparams.h  llama-impl.cpp  llama-kv-cells.h  llama-memory.h  llama-model-loader.h  llama-model-saver.cpp  llama-model-saver.h  llama-model.h  llama-sampler.h  llama-vocab.cpp  llama-vocab.h  llama.cpp
src/paddle/: CMakeLIsts.txt  CMakeLists_cp.txt  ocr_main.cpp
src/paddle/src/api/pipelines/: ocr.cc  ocr.h
src/paddle/src/base/: base_pipeline.h
src/paddle/src/common/: parallel.h
src/paddle/src/pipelines/doc_preprocessor/: pipeline.h
src/paddle/src/pipelines/ocr/: pipeline.cc  pipeline.h  result.h
src/paddle/src/utils/: ilogger.cc
src/rag/: qwer
src/translation/: translation.cpp
src/video/: video.cpp
src/whisper/: CMakeLists.txt  whisper.cpp  whisper_bridge.cpp
src/whisper/common/: common-whisper.cpp
translation/: translation.cpp
video/: video.cpp
whisper/: whisper_bridge.cpp
